tests/fixtures/invalid/abs_list.py
# Cannot call abs() with List[int]
x = abs([1, 2, 3])
